[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "templatepy"
version = "0.2.9"
authors = [
    { name = "Lars B. Rollik", email = "L.B.Rollik@protonmail.com" }
]
license = { file = "LICENSE" }
description = "templatepy: Template repo for python repositories & PyPi integration"
readme = { file = "README.md", content-type = "text/markdown" }
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = []

[project.urls]
Repository = "https://github.com/larsrollik/templatepy"
"Issue Tracker" = "https://github.com/larsrollik/templatepy/issues"

[project.scripts]
templatepy-entrypoint = "templatepy.__init__:run"

[tool.hatch.build.targets.wheel]
packages = ["templatepy"]

[tool.hatch.build.targets.sdist]
include = [
    "/templatepy",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]
exclude = [
    "*.pyc",
    "__pycache__",
]

[dependency-groups]
dev = [
    "black",
    "bump-my-version",
    "pytest-cov",
    "pre-commit",
    "toml",
    "types-pyyaml",
]

[tool.pytest.ini_options]
addopts = "--cov=templatepy --cov-report=term-missing --maxfail=5"

[tool.ruff]
line-length = 88
indent-width = 4
include = ["*.py", "*.pyi"]
extend-exclude = [
    "*.eggs",
    "*.git",
    "*.hg",
    "*.mypy_cache",
    "*.tox",
    "*.venv",
    "*_build",
    "*buck-out",
    "*build",
    "*dist",
]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "UP",
    "YTT",
    "SIM",
    "PTH",
    "TCH",
    "PYI",
]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
".bumpversion.cfg" = ["E501", "W291", "W292"]

[tool.mypy]
warn_return_any = false
ignore_missing_imports = true