[metadata]
name = templatepy
version = 0.0.3
author = Lars B. Rollik
author_email = L.B.Rollik@protonmail.com
license = BSD 3-Clause License
license_files = LICENSE
description = templatepy: template for derivative python packages
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/larsrollik/templatepy
project_urls =
	Repository = https://github.com/larsrollik/templatepy
	Issue Tracker = https://github.com/larsrollik/templatepy/issues
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
package_dir =
packages = find:
python_requires = >=3.6
install_requires =
	black

[options.packages.find]
where =

[options.extras_require]
dev =
	black
	pytest-cov
	pytest
	gitpython
	bump2version
	pre-commit
	flake8

[options.entry_points]
console_scripts =
	templatepy-entrypoint = templatepy.__init__:run

[options.package_data]
* = *.config


[flake8]
ignore = E203, E266, E501, W503, F403, F401
max-line-length = 79
max-complexity = 18
select = B,C,E,F,W,T4,B9
exclude = __init__.py,build,__pycache__,.git,tests
